added first example

--- a/reports/02_discussion_fallacies/main.bib
+++ b/reports/02_discussion_fallacies/main.bib
@@ -26,3 +26,13 @@
   pages     = {7--12},
   url       = {http://www.aclweb.org/anthology/D17-2002}
 }
+
+@misc{Walton1998,
+address = {Alabama},
+author = {Walton, Douglas},
+file = {:Users/pieterdelobelle/Downloads/Douglas Walton-Ad Hominem Arguments (Studies in Rhetoric {\&} Communication) (1998).pdf:pdf},
+mendeley-groups = {KAW},
+publisher = {The University of Alabama Press},
+title = {{Ad Hominem Arguments (Studies in Rhetoric {\&} Communication)}},
+year = {1998}
+}
