Added intended model outcome

--- a/reports/02_discussion_fallacies/main.tex
+++ b/reports/02_discussion_fallacies/main.tex
@@ -74,6 +74,9 @@ Aside form the dataset, the related article~\cite{Habernal.et.al.2018.NAACL.adho
 
 \end{itemize}
 
+\section{Intended model outcome}
+The ideal model should---given our earlier requirements---be able to predict with a certain accuracy/confidence if a given sentence or paragraph contains an \emph{ad hominem} fallacy.
+
 \bibliographystyle{IEEEtran}
 \bibliography{main}
 
