updated description for fallacies discussion

--- a/reports/02_discussion_fallacies/main.tex
+++ b/reports/02_discussion_fallacies/main.tex
@@ -71,11 +71,23 @@ Aside form the dataset, the related article~\cite{Habernal.et.al.2018.NAACL.adho
     Some peculiar features in this sentence are the combination of the words `\emph{you}' and `\emph{too}', indicating the behavior or an action of the first speaker  that contradicts his claim. Also the sequence ``\emph{you told me yourself}'' seems to attack an earlier statement of the first speaker, perhaps even out of an entirely different context. Both are features on a word or n-gram level.
 
     The sequence ``\emph{your argument (\dots) is no good}'' does attack the argument instead of the first speaker, and later on an \emph{ad hominem} attack follows. So depending on the dataset, this sequence might be ubiquitous in the set of fallacies.
-
+    
+    \item \emph{You're literally just quoting half of the amendment and then insisting the language isn't ambiguous. Implying I don't understand the English language isn't a winning argument.}\footnote{Borrowed from~\cite{Habernal.et.al.2018.NAACL.adhominem}}.
+    
+    This is an example of quote which could potentially be classified as an \emph{ad hominem} attack.
+    
+    At the start of the quote, the contraction ``\emph{You're}`` indicates that the counter-argument is analyzing the other person's initial reasoning and not attacking his or her personality per se. In this case, we should use a method which took into account a vector of words like ``\emph{You're literally just quoting}'' so the classifier can have a broader understanding of the speaker's intentions.
+    
+    In the second sentence, \emph{understand the English language} is very likely to appear in an \emph{ad hominem} attack as diminishing the ability of the other person to understand English. 
+    
 \end{itemize}
 
 \section{Intended model outcome}
-The ideal model should---given our earlier requirements---be able to predict with a certain accuracy/confidence if a given sentence or paragraph contains an \emph{ad hominem} fallacy.
+The ideal model should---given our earlier requirements---be able to predict with a certain accuracy/confidence if a given sentence or paragraph contains an \emph{ad hominem} fallacy. The confidence of the model will depend on the accuracy we are able to achieve. 
+
+Our model will not classify if the given quote contains a fallacy or not. It will classify if the given quote contains an \emph{ad hominem} type of fallacy or not.
+
+The user would have to keep in mind that the length of the paragraph can affect the analysis of it, meaning that more words and the interplay of those words can confuse the classifier. Furthermore, more sentences establish a bigger context and that could affect where specific sentences are fallacious or not.
 
 \bibliographystyle{IEEEtran}
 \bibliography{main}
