--- a/models/01_preliminary/merge_datasets.ipynb
+++ b/models/01_preliminary/merge_datasets.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,12 +28,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1. Preprocessing\n",
     "The general dataset was analysed by us manually. We wrote 1 or 0 in the column with our name depending if we considered that row was a 'good' non-fallacy or a 'good' ad-hominem attack. If 2 out of 3 people put a 1 in a column, we are keeping it for our dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +164,7 @@
        "11         True  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +401,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,16 +412,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(29281, 2)\n",
-      "(382, 2)\n",
-      "(29663, 2)\n",
       "(29281, 2)\n",
       "(382, 2)\n",
       "(29663, 2)\n"
@@ -432,17 +430,22 @@
     "df_general = pd.concat([general['fallacies.df.Text'], general['isAdHominem']], axis=1, keys=['body', 'isAdHominem'])\n",
     "df_merged = df_ad_hominems.append(df_general)\n",
     "\n",
-    "print(df_ad_hominems.shape)\n",
-    "print(df_general.shape)\n",
-    "print(df_merged.shape)\n",
-    "\n",
     "df_merged[\"body\"] = df_merged[\"body\"].astype(str)\n",
     "df_merged[\"isAdHominem\"] = df_merged[\"isAdHominem\"].astype(bool)\n",
-    "df_merged = df_merged[~df_merged.isin([np.nan, np.inf, -np.inf]).any(1)]\n",
+    "df_merged = df_merged[~df_merged.isin([np.nan, np.inf, -np.inf]).any(1)] ## Remove rows with NaN values\n",
     "\n",
     "print(df_ad_hominems.shape)\n",
     "print(df_general.shape)\n",
     "print(df_merged.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Export\n",
+    "\n",
+    "After running the cell below, the merged_datasets file is created and includes both datasets merged. Keep in mind that the first 29281 rows belong originally to the ad_hominems dataset and the following 382 rows belong to the general dataset. The first column just includes the id of every row from each dataset. So it starts with id 0 (first row of ad_hominems dataset), then follows to id 29280 (last row of ad_hominems dataset), then starts over with id 0 again (first row of general dataset) and ends with id 588 (last row of general dataset)."
    ]
   },
   {
@@ -453,7 +456,7 @@
    },
    "outputs": [],
    "source": [
-    "#df_merged.to_csv(\"../../data/merged_datasets.csv\")"
+    "df_merged.to_csv(\"../../data/merged_datasets.csv\")"
    ]
   }
  ],
