Removed bug about 'string' nan's in the dataset

--- a/models/01_preliminary/merge_datasets.ipynb
+++ b/models/01_preliminary/merge_datasets.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +164,7 @@
        "11         True  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
      "text": [
       "(29281, 2)\n",
       "(382, 2)\n",
-      "(29663, 2)\n"
+      "(29660, 2)\n"
      ]
     }
    ],
@@ -432,7 +432,7 @@
     "\n",
     "df_merged[\"body\"] = df_merged[\"body\"].astype(str)\n",
     "df_merged[\"isAdHominem\"] = df_merged[\"isAdHominem\"].astype(bool)\n",
-    "df_merged = df_merged[~df_merged.isin([np.nan, np.inf, -np.inf]).any(1)] ## Remove rows with NaN values\n",
+    "df_merged = df_merged[~df_merged.isin([np.nan, np.inf, -np.inf, 'nan']).any(1)] ## Remove rows with NaN values\n",
     "\n",
     "print(df_ad_hominems.shape)\n",
     "print(df_general.shape)\n",
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
