Skipped N-grams developed

--- a/models/02_tfidf/helper.ipynb
+++ b/models/02_tfidf/helper.ipynb
@@ -8,17 +8,35 @@
    },
    "outputs": [],
    "source": [
+    "from nltk.util import skipgrams\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_data():\n",
     "    return pd.read_csv('../../data/merged_datasets.csv', usecols=(['body', 'isAdHominem']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_data_with_skip_n_grams(n, k):\n",
+    "    data = get_data()\n",
+    "    for index, row in data.iterrows():\n",
+    "        data.at[index, 'body'] = list(skipgrams(data.loc[index, 'body'].split(), n, k))\n",
+    "    return data"
    ]
   }
  ],
